# email2trac

./: AUTHORS  ChangeLog  Changelog  INSTALL  Makefile  Makefile.in  NOTICE  README  aclocal.m4  config.h.in  configure  configure.in  delete_spam.py  delete_spam.py.in  email2trac.conf  email2trac.py  email2trac.py.in  email2trac.spec  email2trac_test.sh  msg.txt  run_email2trac.c  run_email2trac.h  test7.eml
debian/: changelog  conffiles  control  postrm  rules
trunk/: AUTHORS  Makefile.in  README  delete_spam.py.in  email2trac.conf  run_email2trac.c
trunk/debian/: postinst
